--- a/configs/raspberrypi3_xenomai_defconfig
+++ b/configs/raspberrypi3_xenomai_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot -gf35fbe2-dirty Configuration
+# Buildroot -gc034286-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -171,7 +171,7 @@ BR2_BZCAT="bzcat"
 BR2_XZCAT="xzcat"
 BR2_LZCAT="lzip -d -c"
 BR2_TAR_OPTIONS=""
-BR2_DEFCONFIG="/home/gabriel/Projects/buildroot/buildroot-2020.02.10-vanilla/configs/raspberrypi3_defconfig"
+BR2_DEFCONFIG="/home/gabriel/Projects/buildroot/buildroot-2020.02.10-vanilla/configs/raspberrypi3_xenomai_defconfig"
 BR2_DL_DIR="$(TOPDIR)/dl"
 BR2_HOST_DIR="$(BASE_DIR)/host"
 
@@ -350,7 +350,7 @@ BR2_TOOLCHAIN_HAS_ATOMIC=y
 BR2_ROOTFS_SKELETON_DEFAULT=y
 # BR2_ROOTFS_SKELETON_CUSTOM is not set
 BR2_TARGET_GENERIC_HOSTNAME="buildroot"
-BR2_TARGET_GENERIC_ISSUE="Welcome to Linux!"
+BR2_TARGET_GENERIC_ISSUE="Welcome to Xenomai!"
 BR2_TARGET_GENERIC_PASSWD_SHA256=y
 # BR2_TARGET_GENERIC_PASSWD_SHA512 is not set
 BR2_TARGET_GENERIC_PASSWD_METHOD="sha-256"
@@ -413,8 +413,8 @@ BR2_LINUX_KERNEL_CUSTOM_GIT=y
 # BR2_LINUX_KERNEL_CUSTOM_HG is not set
 # BR2_LINUX_KERNEL_CUSTOM_SVN is not set
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/gabrieldinse/linux-5.4.93-ipipe.git"
-BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="master"
-BR2_LINUX_KERNEL_VERSION="master"
+BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="5462eb01503dd1ad69d9cbe9f0d51a0bd4b0f98d"
+BR2_LINUX_KERNEL_VERSION="5462eb01503dd1ad69d9cbe9f0d51a0bd4b0f98d"
 BR2_LINUX_KERNEL_PATCH=""
 BR2_LINUX_KERNEL_USE_DEFCONFIG=y
 # BR2_LINUX_KERNEL_USE_ARCH_DEFAULT_CONFIG is not set
