Updated scripts and configs to use rpi3 cobalt device tree

--- a/configs/raspberrypi3_xenomai_defconfig
+++ b/configs/raspberrypi3_xenomai_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot -gc034286-dirty Configuration
+# Buildroot -g6dba99c-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -412,9 +412,9 @@ BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 # BR2_LINUX_KERNEL_CUSTOM_HG is not set
 # BR2_LINUX_KERNEL_CUSTOM_SVN is not set
-BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/gabrieldinse/linux-5.4.93-ipipe.git"
-BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="5462eb01503dd1ad69d9cbe9f0d51a0bd4b0f98d"
-BR2_LINUX_KERNEL_VERSION="5462eb01503dd1ad69d9cbe9f0d51a0bd4b0f98d"
+BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/gabrieldinse/linux-4.19.144-ipipe.git"
+BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="9c12c8b"
+BR2_LINUX_KERNEL_VERSION="9c12c8b"
 BR2_LINUX_KERNEL_PATCH=""
 BR2_LINUX_KERNEL_USE_DEFCONFIG=y
 # BR2_LINUX_KERNEL_USE_ARCH_DEFAULT_CONFIG is not set
