Added stress-ng package

--- a/configs/raspberrypi3_xenomai_defconfig
+++ b/configs/raspberrypi3_xenomai_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot -gccad2fc Configuration
+# Buildroot -gddca591 Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -617,7 +617,7 @@ BR2_PACKAGE_PTM2HUMAN_ARCH_SUPPORTS=y
 # BR2_PACKAGE_SPIDEV_TEST is not set
 # BR2_PACKAGE_STRACE is not set
 BR2_PACKAGE_STRESS=y
-# BR2_PACKAGE_STRESS_NG is not set
+BR2_PACKAGE_STRESS_NG=y
 # BR2_PACKAGE_SYSDIG is not set
 # BR2_PACKAGE_TCF_AGENT is not set
 BR2_PACKAGE_TCF_AGENT_ARCH="arm"
@@ -2286,7 +2286,7 @@ BR2_PACKAGE_RPCBIND=y
 # BR2_PACKAGE_ACL is not set
 # BR2_PACKAGE_ANDROID_TOOLS is not set
 # BR2_PACKAGE_ATOP is not set
-# BR2_PACKAGE_ATTR is not set
+BR2_PACKAGE_ATTR=y
 BR2_PACKAGE_AUDIT_ARCH_SUPPORTS=y
 # BR2_PACKAGE_AUDIT is not set
 # BR2_PACKAGE_BUBBLEWRAP is not set
@@ -2318,7 +2318,7 @@ BR2_PACKAGE_INITSCRIPTS=y
 #
 # BR2_PACKAGE_IPRUTILS is not set
 # BR2_PACKAGE_IRQBALANCE is not set
-# BR2_PACKAGE_KEYUTILS is not set
+BR2_PACKAGE_KEYUTILS=y
 # BR2_PACKAGE_KMOD is not set
 # BR2_PACKAGE_KVMTOOL is not set
 # BR2_PACKAGE_LIBOSTREE is not set
