--- a/custom-scripts/jitter_and_latency/Makefile
+++ b/custom-scripts/jitter_and_latency/Makefile
@@ -1,7 +1,7 @@
 STAGE=../../output/target/
 XENO_CONFIG := ../../output/target/usr/xenomai/bin/xeno-config
-CFLAGS := $(shell DESTDIR=$(STAGE) $(XENO_CONFIG) --rtdm --skin=alchemy --cflags)
-LDFLAGS := $(shell DESTDIR=$(STAGE) $(XENO_CONFIG) --rtdm --skin=alchemy --ldflags)
+CFLAGS := $(shell DESTDIR=$(STAGE) $(XENO_CONFIG) --rtdm --posix --alchemy --cflags)
+LDFLAGS := $(shell DESTDIR=$(STAGE) $(XENO_CONFIG) --rtdm --posix --alchemy --ldflags)
 CC := $(shell DESTDIR=$(STAGE) $(XENO_CONFIG) --cc)
 
 EXECUTABLE := jitter_and_latency jitter_and_latency2 jitter_and_latency_no_worker
