Changed kernel commit hash to new one

--- a/configs/raspberrypi3_xenomai_defconfig
+++ b/configs/raspberrypi3_xenomai_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot -gddca591 Configuration
+# Buildroot -gd61cef2-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -413,8 +413,8 @@ BR2_LINUX_KERNEL_CUSTOM_GIT=y
 # BR2_LINUX_KERNEL_CUSTOM_HG is not set
 # BR2_LINUX_KERNEL_CUSTOM_SVN is not set
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/gabrieldinse/linux-4.19.144-ipipe.git"
-BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="0f52fc6"
-BR2_LINUX_KERNEL_VERSION="0f52fc6"
+BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="ecd3bbd"
+BR2_LINUX_KERNEL_VERSION="ecd3bbd"
 BR2_LINUX_KERNEL_PATCH=""
 BR2_LINUX_KERNEL_USE_DEFCONFIG=y
 # BR2_LINUX_KERNEL_USE_ARCH_DEFAULT_CONFIG is not set
