--- a/configs/raspberrypi3_xenomai_defconfig
+++ b/configs/raspberrypi3_xenomai_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot -gafaa3e7-dirty Configuration
+# Buildroot -ge819d20-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -435,7 +435,7 @@ BR2_LINUX_KERNEL_GZIP=y
 # BR2_LINUX_KERNEL_XZ is not set
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 # BR2_LINUX_KERNEL_DTB_IS_SELF_BUILT is not set
-BR2_LINUX_KERNEL_INTREE_DTS_NAME="bcm2837-rpi-3-b bcm2837-rpi-3-b-cobalt"
+BR2_LINUX_KERNEL_INTREE_DTS_NAME="bcm2837-rpi-3-b"
 BR2_LINUX_KERNEL_CUSTOM_DTS_PATH=""
 BR2_LINUX_KERNEL_DTB_OVERLAY_SUPPORT=y
 # BR2_LINUX_KERNEL_INSTALL_TARGET is not set
